<resources>

    <!-- Name of the app -->
    <string name="app_name">Big Bazaar</string>

    <!-- Label for overflow menu option that inserts fake item data into the app -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all item data in the app -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title for the activity to add a new item -->
    <string name="editor_activity_title_new_item">Add Item</string>

    <!-- Title for the activity to edit an existing item -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <!-- Label for editor menu option to save item and leave editor -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for product name field in the editor -->
    <string name="hint_product_name">Product Name</string>

    <!-- Text hint for price field in the editor -->
    <string name="hint_product_price">Price</string>

    <!-- Units for price of the product (rupees) -->
    <string name="unit_product_price">₹</string>

    <!-- Text hint for quantity field in the editor -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Text hint to decrease quantity in the button -->
    <string name="hint_decrease_quantity">-</string>

    <!-- Text hint to increase quantity in the button -->
    <string name="hint_increase_quantity">+</string>

    <!-- Label for supplier category of attributes in the editor -->
    <string name="category_supplier">Supplier</string>

    <!-- Text hint for supplier name field in the editor -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Text hint for supplier phone number field in the editor -->
    <string name="hint_supplier_phone_number">Phone Number</string>

    <!-- Label for the item details if it is unknown -->
    <string name="unknown">Unknown</string>

    <!-- Error label if any field is left blank -->
    <string name="required">Field Required</string>

    <!-- Error label to show that product price cannot be negative -->
    <string name="price_cannot_be_negative">Price can\'t be negative</string>

    <!-- Error label to show that product quantity cannot be negative -->
    <string name="quantity_cannot_be_negative">Quantity can\'t be negative</string>

    <!-- Toast message in editor when new item has been successfully inserted -->
    <string name="editor_insert_item_successful">Item Saved</string>

    <!-- Toast message in editor when new item has failed to be inserted  -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <!-- Toast message in editor when existing item has failed to be updated -->
    <string name="editor_update_item_failed">Error with updating item</string>

    <!-- Toast message in editor when existing item has been successfully updated -->
    <string name="editor_update_item_successful">Item Updated</string>

    <!-- Toast message in editor when current item was successfully deleted -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current item -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog message to ask the user to confirm deleting all the items -->
    <string name="delete_all_dialog_msg">Delete all items?</string>

    <!-- Dialog button text for the option to confirm deleting the current item -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Title text for the empty view -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add an item -->
    <string name="empty_view_subtitle_text">Get started by adding an item</string>

</resources>
